After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 701383 - NetworkManager does not daemonize anymore
NetworkManager does not daemonize anymore
Status: RESOLVED FIXED
Product: NetworkManager
Classification: Platform
Component: general
git master
Other Linux
: Normal major
: ---
Assigned To: NetworkManager maintainer(s)
NetworkManager maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2013-05-31 18:39 UTC by Chanaud Guillaume
Modified: 2013-06-03 10:47 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Chanaud Guillaume 2013-05-31 18:39:07 UTC
Hi...

I was playing with git current master of NetworkManager (in fact i need some of the patches in it in a current project...) and i think tere is something abnormal.

NetworkManager never daemonize. Because of recent change in --no-daemon/-n option (reverse flag), the become_daemon is never set to true !

So if you start NetworkManager with or without --no-daemon, become_daemon is FALSE, whatever you do, and then you cannot daemonize and get your pidfile (which is annoying :) )!

(it was annoying because i had the networkmanager in init.d, and so i could not had my login prompt...)

Setting become_daemon default to TRUE resolve everything..

gboolean become_daemon = TRUE, run_from_build_dir = FALSE;

(default to TRUE, if --no-daemon is set then become_daemon=FALSE (expected behavior))


Thanks
Comment 1 Jiri Klimes 2013-06-03 10:47:01 UTC
You are right, thanks for reporting that!

Fixed pushed as baf820e0c14ae3acf6df2e41f43f5422dcd1bdda