main: allow daemonizing again - initialize become_daemon to TRUE (bgo #701383)

7ff3d1500e8a9dcce4d12b7b879bf1d178b94bf8 reversed become_daemon for
"--no-daemon" with G_OPTION_FLAG_REVERSE, but missed to reverse initialization
into become_daemon=TRUE and thus NM couldn't be daemonized.

https://bugzilla.gnome.org/show_bug.cgi?id=701383